Speed up LLM responses

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 PORT=6709
 LLM_PROVIDER=qwen-oauth
+# LLM_MAX_TOKENS=512
+# LLM_TEMPERATURE=0.2
 # Optional:
 # LLM_DISABLED=1
 # LLM_TIMEOUT_MS=15000
