Default to qwen3.5

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ LLM_PROVIDER=qwen-oauth
 # LLM_DISABLED=1
 # LLM_TIMEOUT_MS=15000
 # LLM_MAX_RETRIES=1
-# QWEN_OAUTH_MODEL=qwen3-coder-plus
+# QWEN_OAUTH_MODEL=qwen3.5
 # QWEN_CLI_BIN=qwen
 # QWEN_CLI_MODEL=
 # OLLAMA_URL=http://127.0.0.1:11434
