--- a/bridge/fly.toml
+++ b/bridge/fly.toml
@@ -17,6 +17,14 @@ primary_region = 'ord'
   source = 'ajl_agent_data'
   destination = '/data'
 
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
+
 [[vm]]
   memory = '1gb'
   cpus = 1
