--- a/docs/app/manifest.json
+++ b/docs/app/manifest.json
@@ -1,7 +1,8 @@
 {
   "name": "Au Jour Le Jour",
   "short_name": "AuJour",
-  "start_url": "./",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#f6f7f9",
   "theme_color": "#0f172a",
