--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Au Jour Le Jour",
   "short_name": "AuJour",
-  "start_url": "./",
+  "start_url": "/site/",
   "display": "standalone",
   "background_color": "#f6f7f9",
   "theme_color": "#0f172a",
